Add background colors

--- a/index.html
+++ b/index.html
@@ -86,13 +86,15 @@
         </article>
         <aside class="cta">
             <div class="inner-wrapper">
-                <h2>
-                Call to action! It's time!
-                </h2>
-                <p>Sign up for our middle-of-the-road product!</p>
-                <button type="button">
-                    Sign Up
-                </button>
+                <div class="cta-card">
+                    <h2>
+                        Call to action! It's time!
+                    </h2>
+                    <p>Sign up for our middle-of-the-road product!</p>
+                    <button type="button">
+                        Sign Up
+                    </button>
+                </div>
             </div>
         </aside>
     </main>
