--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <header class="site-head">
         <div class="inner-wrapper">
-            <a href="logo">Logo</a>
+            <a href="#" class="logo">Logo</a>
             <nav= id="site-nav">
-                <a href="#">One</a>
-                <a href="#">Two</a>
-                <a href="#">Three</a>
+                <a href="#" class="nav-link">One</a>
+                <a href="#" class="nav-link">Two</a>
+                <a href="#" class="nav-link">Three</a>
             </nav>
         </div>
     </header>
@@ -22,10 +22,10 @@
         <section class="intro">
             <div class="inner-wrapper">
                 <div class="intro-left">
-                    <h1>
+                    <h1 class="hero-title">
                         This website is garden-variety
                     </h1>
-                    <p>
+                    <p class="hero-secondary">
                         Typical, ordinary, run-of-the-mill, predictable...
                     </p>
                     <button type="button">
@@ -33,13 +33,13 @@
                     </button>
                 </div>
                 <div class="intro-right">
-                    <img src="" alt="Boring hero">
+                    <img src="" alt="Boring hero" class="hero-img">
                 </div>
             </div>
         </section>
         <section class="offerings">
             <div class="inner-wrapper">
-                <h2>Characterless content</h2>
+                <h2 class="offering-header">Characterless content</h2>
                 <ul class="cards">
                         <li class="card card-one">
                             <figure>
