--- a/index.html
+++ b/index.html
@@ -11,10 +11,18 @@
     <header class="site-head">
         <div class="inner-wrapper">
             <a href="#" class="logo">Logo</a>
-            <nav= id="site-nav">
-                <a href="#" class="nav-link">One</a>
-                <a href="#" class="nav-link">Two</a>
-                <a href="#" class="nav-link">Three</a>
+            <nav class="site-nav">
+                <ul>
+                    <li>
+                        <a href="#" class="nav-link">One</a>
+                    </li>
+                    <li>
+                     <a href="#" class="nav-link">Two</a>
+                    </li>
+                    <li>
+                        <a href="#" class="nav-link">Three</a>
+                    </li>
+                </ul>
             </nav>
         </div>
     </header>
@@ -33,7 +41,7 @@
                     </button>
                 </div>
                 <div class="intro-right">
-                    <img src="" alt="Boring hero" class="hero-img">
+                    <img src="images/green.jpeg" alt="Boring hero" class="hero-img">
                 </div>
             </div>
         </section>
