Add cta style and layout

--- a/index.html
+++ b/index.html
@@ -98,13 +98,17 @@
             <div class="inner-wrapper">
                 <div class="inner-inner-wrapper">
                     <div class="cta-card">
-                        <h2>
-                            Call to action! It's time!
-                        </h2>
-                        <p>Sign up for our middle-of-the-road product!</p>
-                        <button type="button">
-                            Sign Up
-                        </button>
+                        <div class="cta-left">
+                            <h2>
+                                Call to action! It's time!
+                            </h2>
+                            <p>Sign up for our middle-of-the-road product!</p>
+                        </div>
+                        <div class="cta-right">
+                            <button type="button">
+                                Sign Up
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
