--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
         <article class="testimonial">
             <div class="inner-wrapper">
                  <blockquote>
-                    <p>Hey. I'm average.</p>
-                    <p>–<cite="https://c.tenor.com/AZvg1tReJyMAAAAC/hey-i%27m-average..gif">Cory Matthews, Boy Meets World</p></cite>
+                    <p class="quote">Hey. I'm average.</p>
+                    <p class="cite">–<cite="https://c.tenor.com/AZvg1tReJyMAAAAC/hey-i%27m-average..gif">Cory Matthews, Boy Meets World</p></cite>
                  </blockquote>   
             </div>
         </article>
