Add footer style

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
     <footer class="site-foot">
         <div class="inner-wrapper">
            <p><small>Copyright ©️ Garden-Variety Landing Page 2021</small></p> 
+           <p><small>Made by @<a href="https://jewell.dev">Jewell</a></small></p>
         </div>
     </footer>
 </body>
